# LicensePlateProject

./: LICENSE  README.md  pyproject.toml
runs/detect/train3/: args.yaml
runs/detect/train4/: args.yaml
runs/detect/train5/: args.yaml
src/license_plate_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/plate_detector/: __main__.py
test/: test.py  test2.py  test3.py  test4.py
